# monorepo-example

./: .gitignore  README.md
bazel/: README.md  WORKSPACE  package.json
bazel/src/front/desktop/: BUILD.bazel
bazel/src/front/desktop/friend/: BUILD.bazel
bazel/src/front/mobile/friend/: BUILD.bazel
nx/: nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
nx/apps/desktop/: project.json
nx/apps/desktop-e2e/: project.json
nx/apps/desktop/src/app/: app.spec.tsx  app.tsx
nx/apps/mobile/: project.json
nx/apps/mobile/src/app/: app.tsx
nx/libs/components/src/lib/: components.tsx
rush/: rush.json
rush/common/config/rush/: deploy-deployment-desktop.json  deploy-deployment-mobile.json  pnpm-lock.yaml
rush/commons/: package-lock.json  package.json  tsconfig.json
rush/components/: LICENSE  package.json  tsconfig.json
rush/components/src/: index.tsx
rush/desktop/: package-lock.json  package.json  tsconfig.json
rush/desktop/src/: index.tsx
rush/mobile/: package-lock.json  package.json  tsconfig.json
rush/mobile/src/: index.tsx
