package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["friend.tsx"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/front/desktop/config",
        "//src/front/desktop/types",
        "@npm//react",
        "@npm//@types/react",
    ]
)
