package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["friend.tsx"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/front/mobile/config",
        "//src/front/mobile/types",
        "@npm//react",
        "@npm//@types/react",
    ]
)
